--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,42 @@
       </div>
     </nav>
     {%block content%}{%endblock%}
+    <div
+      class="footer"
+      style="
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        text-align: center;
+      "
+    >
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Posts</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Photos</a>
+            </li>
+          </ul>
+        </div>
+        <div
+          class="user"
+          style="width: 45%; justify-content: end; display: flex"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Welcom User</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
