--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,80 @@
-{% extends "base.html" %}
-{%block title%}Home Page{%endblock%}
-{%block content%}
-<h1>Test</h1>
-{%endblock%}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login</title>
+  </head>
+
+  <body>
+    <div
+      class="conteiner"
+      style="
+        position: fixed;
+        padding: 0;
+        margin: 0;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: #f8f8f8;
+        overflow: auto;
+      "
+    >
+      <div class="image" style="justify-content: center; display: flex">
+        <img src="../static/unknown.png" style="width: 50%" />
+      </div>
+      <div
+        class="email"
+        style="
+          display: flex;
+          width: 100%;
+          justify-content: center;
+          align-items: center;
+        "
+      >
+        <p style="font-size: 50px; margin-right: 183px;">Email:</p>
+        <input
+          type="email"
+          name="email"
+          placeholder="Enter Email"
+          style="width: 716px; height: 65px; font-size: 35px"
+        />
+      </div>
+      <div
+        class="password"
+        style="
+          display: flex;
+          width: 100%;
+          justify-content: center;
+          align-items: center;
+        "
+      >
+        <p style="font-size: 50px; margin-right: 112px;">Password:</p>
+        <input
+          type="password"
+          name="password"
+          placeholder="Enter Password"
+          style="width: 716px; height: 65px; font-size: 35px"
+        />
+      </div>
+      <div class="buttoms" style="display: flex; justify-content: center; gap: 50px;">
+        <div class="login">
+          <input
+            type="submit"
+            value="Log in"
+            style="width: 495.52px; height: 86.05px; font-size: 50px"
+          />
+        </div>
+        <div class="signup">
+          <input
+            type="submit"
+            value="Sign up"
+            style="width: 495.52px; height: 86.05px; font-size: 50px"
+          />
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
