--- a/templates/base.html
+++ b/templates/base.html
@@ -47,33 +47,59 @@
         bottom: 0;
         width: 100%;
         text-align: center;
+        height: 10%;
+        background-color: #161111;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 250px;
       "
     >
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Posts</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Photos</a>
-            </li>
-          </ul>
-        </div>
-        <div
-          class="user"
-          style="width: 45%; justify-content: end; display: flex"
-        >
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Welcom User</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+      <a
+        href="#"
+        class="about"
+        style="
+          width: 134px;
+          height: 59px;
+          font-family: Roboto;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 35px;
+          line-height: 35px;
+          color: #ffffff;
+        "
+        >About</a
+      >
+      <a
+        href="#"
+        class="contact"
+        style="
+          width: 175px;
+          height: 70px;
+          font-family: Roboto;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 35px;
+          line-height: 50px;
+          color: #ffffff;
+        "
+        >Contact</a
+      >
+      <a
+        href="#"
+        class="changeLanguage"
+        style="
+          width: 220px;
+          height: 80px;
+          font-family: Roboto;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 35px;
+          line-height: 35px;
+          color: #ffffff;
+        "
+        >Change Language</a
+      >
     </div>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
