--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,5 +1,61 @@
-{% extends "base.html" %} {% block title %}Login Page{% endblock %} {% block
+{% extends "base.html" %} {% block title %}Home Page{% endblock %} {% block
 content %}
-
+<div class="hmoePage" style="display: flex; justify-content: center">
+  <div
+    class="fileUpload"
+    style="
+      width: 425px;
+      height: 299px;
+      background: #ffffff;
+      border: 2px dashed #000000;
+      margin-top: 100px;
+      justify-content: center;
+      display: flex;
+      align-items: center;
+    "
+  >
+    <p
+      style="
+        width: 371px;
+        height: 29px;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 25px;
+        line-height: 29px;
+        color: #000000;
+      "
+    >
+      Drop image here or click to select
+    </p>
+  </div>
+</div>
+<div
+  class="button"
+  style="display: flex; justify-content: center; margin-top: 45px; gap: 25px"
+>
+  <input
+    type="submit"
+    value="Search"
+    style="
+      width: 205px;
+      height: 63px;
+      background: #65bf43;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      color: #ffffff;
+    "
+  />
+  <input
+    type="submit"
+    value="Clear"
+    style="
+      width: 205px;
+      height: 63px;
+      background: #65bf43;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      color: #ffffff;
+    "
+  />
+</div>
 
 {% endblock %}
