--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -13,27 +13,27 @@
     <title>{%block title%}{%endblock%}</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background: #65BF43; padding:0">
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="/homepage">Home</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#">Posts</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Photos</a>
+            <a class="nav-link" href="/photos">Photos</a>
           </li>
         </ul>
       </div>
       <div class="image">
-        <img src="../static/unknown.png" style="height: 40px" />
+        <img src="../static/unknown.png" style="height: 50px" />
       </div>
       <div class="user" style="width: 45%; justify-content: end; display: flex">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Welcom User</a>
+            <a class="nav-link" href="/setting">Welcom User</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/logout">Logout</a>
           </li>
         </ul>
       </div>
