--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -13,7 +13,10 @@
     <title>{%block title%}{%endblock%}</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background: #65BF43; padding:0">
+    <nav
+      class="navbar navbar-expand-lg navbar-light"
+      style="background: #65bf43; padding: 0"
+    >
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
@@ -30,7 +33,7 @@
       <div class="user" style="width: 45%; justify-content: end; display: flex">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="/setting">Welcom User</a>
+            <a class="nav-link" href="/setting">Welcom {{user.email}}</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="/logout">Logout</a>
