--- a/website/templates/homepage.html
+++ b/website/templates/homepage.html
@@ -14,7 +14,7 @@ content %}
       align-items: center;
     "
   >
-    <p
+    <!-- <p
       style="
         width: 371px;
         height: 29px;
@@ -27,7 +27,9 @@ content %}
       "
     >
       Drop image here or click to select
-    </p>
+    </p> -->
+    <div><input type="file" id="img" name="img" accept="image/*"></div>
+    
   </div>
 </div>
 <div
@@ -45,6 +47,7 @@ content %}
       color: #ffffff;
     "
   />
+  
   <input
     type="submit"
     value="Clear"
