input file and css change

--- a/website/templates/usersettings.html
+++ b/website/templates/usersettings.html
@@ -54,7 +54,7 @@ content %}
       </p>
       <input
         type="password"
-        placeholder="Password"
+        placeholder="Enter New Password"
         style="width: 448px; height: 47px"
       />
     </div>
