--- a/website/templates/homepage.html
+++ b/website/templates/homepage.html
@@ -1,6 +1,22 @@
 {% extends "base.html" %} {% block title %}Home Page{% endblock %} {% block
 content %}
-<div class="hmoePage" style="display: flex; justify-content: center">
+<div style="display: flex; justify-content: center; margin-top: 40px">
+  <p
+    style="
+      width: 371px;
+      height: 29px;
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 25px;
+      line-height: 29px;
+      color: #000000;
+    "
+  >
+    Drop image here or click to select
+  </p>
+</div>
+<div class="DD" style="display: flex; justify-content: center">
   <div
     class="fileUpload"
     style="
@@ -8,28 +24,19 @@ content %}
       height: 299px;
       background: #ffffff;
       border: 2px dashed #000000;
-      margin-top: 100px;
+      margin-top: 45px;
       justify-content: center;
       display: flex;
       align-items: center;
     "
   >
-    <!-- <p
-      style="
-        width: 371px;
-        height: 29px;
-        font-family: Roboto;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 25px;
-        line-height: 29px;
-        color: #000000;
-      "
-    >
-      Drop image here or click to select
-    </p> -->
-    <div><input type="file" id="img" name="img" accept="image/*"></div>
-    
+    <input
+      style="height: inherit; width: inherit; padding: 110px"
+      type="file"
+      id="img"
+      name="img"
+      accept="image/*"
+    />
   </div>
 </div>
 <div
@@ -47,7 +54,7 @@ content %}
       color: #ffffff;
     "
   />
-  
+
   <input
     type="submit"
     value="Clear"
@@ -58,6 +65,7 @@ content %}
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       color: #ffffff;
     "
+    onClick="window.location.href=window.location.href"
   />
 </div>
 
