--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -59,7 +59,7 @@
       "
     >
       <a
-        href="#"
+        href="/about"
         class="about"
         style="
           width: 134px;
