--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -74,7 +74,7 @@
         >About</a
       >
       <a
-        href="#"
+        href="/contact"
         class="contact"
         style="
           width: 175px;
