--- a/website/templates/homepage.html
+++ b/website/templates/homepage.html
@@ -154,7 +154,7 @@ content %}
         if (resp.ok)
           resp.json().then((data) => {
             console.log("HERE");
-            displayDescription(data);
+            // displayDescription(data);
           });
       })
       .catch((err) => {
