--- a/website/templates/homepage.html
+++ b/website/templates/homepage.html
@@ -142,8 +142,8 @@ content %}
     predictImage(submitFile);
   }
   function predictImage(image) {
-    console.log("ASDAD");
-    fetch("/predict", {
+    console.log("ASDAD", image);
+    fetch("./predict", {
       method: "POST",
       headers: {
         "Content-Type": "application/json",
@@ -153,8 +153,7 @@ content %}
       .then((resp) => {
         if (resp.ok)
           resp.json().then((data) => {
-            console.log("HERE");
-            // displayDescription(data);
+            displayDescription(data);
           });
       })
       .catch((err) => {
