--- a/website/templates/homepage.html
+++ b/website/templates/homepage.html
@@ -143,7 +143,7 @@ content %}
   }
   function predictImage(image) {
     console.log("ASDAD", image);
-    fetch("./predict", {
+    fetch("/predict", {
       method: "POST",
       headers: {
         "Content-Type": "application/json",
